# scag

./: CMakeLists.txt  main.cpp
cmake/: FindGUROBI.cmake
src/: ambusher_strategy.cpp  ambusher_strategy.h  game.cpp  game.h  game_map.cpp  game_map.h  point.cpp  point.h  scag_game.cpp  simple_vertex.cpp  simple_vertex.h  square_obstacle.cpp  square_obstacle.h  traveler_strategy.cpp  traveler_strategy.h  utils.h
